# NsuEdu

./: README.md
CircuitDesign/: .gitignore
c-programming/: .gitignore
c-programming/bmp/: CMakeLists.txt  complex_number.c  complex_number.h  libbmp.c  libbmp.h  main.c
c-programming/cli/: CMakeLists.txt  converters.c  converters.h  main.c
c-programming/diff/: CMakeLists.txt  diff.c  diff.h  main.c  smart_buffer.c  smart_buffer.h  t_file.c  t_file.h
c-programming/lab0/: CMakeLists.txt
c-programming/lab1-0/: CMakeLists.txt
c-programming/lab1-1/: .gitignore  CMakeLists.txt
c-programming/lab2/: CMakeLists.txt
c-programming/lab3-0/: CMakeLists.txt
c-programming/lab3-1/: CMakeLists.txt
c-programming/lab4/: CMakeLists.txt
c-programming/lab4/src/: main.c  operator.c  operator.h  token.c  token.h
c-programming/lab4/src/data_structures/: linked_list.c  linked_list.h  stack.c  stack.h
c-programming/lab5/: CMakeLists.txt
c-programming/lab6/: CMakeLists.txt  todo.txt
c-programming/lab7/: CMakeLists.txt
c-programming/lab8-0/: CMakeLists.txt  todo.txt
c-programming/lab8-1/: CMakeLists.txt  todo.txt
c-programming/lab9/: CMakeLists.txt  todo.txt  (+1 more)
cpp-nsu-labs/: SavenkoInstruction.md
cpp-nsu-labs/Workflow-Executor/: .gitignore  CMakeLists.txt  examples.txt  main.cpp
cpp-nsu-labs/Workflow-Executor/blocks/: Block.cpp  Block.h  Creator.cpp  Creator.h
cpp-nsu-labs/Workflow-Executor/blocks/concrete_blocks/: GrepBlock.cpp  GrepBlock.h  ReadFileBlock.cpp  ReadFileBlock.h  ReplaceBlock.cpp  ReplaceBlock.h  WriteFileBlock.cpp  WriteFileBlock.h
cpp-nsu-labs/Workflow-Executor/blocks/creators/: GrepBlockCreator.cpp  GrepBlockCreator.h  ReadFileCreator.cpp  ReadFileCreator.h  ReplaceBlockCreator.cpp  ReplaceBlockCreator.h  WriteFileBlockCreator.cpp  WriteFileBlockCreator.h
cpp-nsu-labs/Workflow-Executor/config/: Config.cpp  Config.h
cpp-nsu-labs/Workflow-Executor/exceptions/: BorderException.h  FileNotFoundException.cpp  FileNotFoundException.h
cpp-nsu-labs/Workflow-Executor/helpers/: FileHelper.cpp  FileHelper.h  LineHelper.cpp  LineHelper.h  StringHelper.cpp  StringHelper.h
db-5-sem/: final-library.accdb
db-project/: .env  .gitignore  final_dump.sql  manage.py  requirements.txt
opp/lab2/: .~lock.pract3_Neretin_21203.docx#  CMakeLists.txt  data.txt  example.sh  generator.py  main.c  parser.py  pract3_Neretin_21203.docx
opp/lab4/: CMakeLists.txt  main.c  parallel.c  pract4_Neretin_21203.doc
opp/lab5/: CMakeLists.txt  main.c  pract5_Neretin_21203.docx
osi-labs/2sem/task1/1.6/final/: CMakeLists.txt  a.out  main.c  mythread.c  mythread.h
osi-labs/2sem/task3-proxy/: .gitignore  CMakeLists.txt  README.md  run.sh
osi-labs/2sem/task3-proxy/src/: ClientInfo.h  Config.h  Proxy.cpp  Proxy.h  ThreadPool.cpp  ThreadPool.h  ThreadWorker.cpp  ThreadWorker.h  main.cpp
osi-labs/2sem/task3-proxy/src/cache/: CacheElement.cpp  CacheElement.h  Storage.cpp  Storage.h
osi-labs/2sem/task3-proxy/src/helpers/: HostConnector.cpp  HostConnector.h  HttpParser.cpp  HttpParser.h  URIParser.cpp  URIParser.h
osi-labs/2sem/task3-proxy/src/http_parser/: httprequestparser.h  httpresponseparser.h  request.h  response.h  urlparser.h
osi-labs/2sem/task3-proxy/tests/: 1-sequential-test.sh  2-concurrent-test.sh  3-cache-invalidation.sh  4-parallel-clients.sh  5-large-file.sh  stress-tester.go  stress.c
otu/: .~lock.lab3.odt#  lab3.odt  pi-2.TNO  pi-2_cir.inx  pi.TNO  pi.cir  pi_approx.TNO  pi_approx_cir.inx  pi_cir.inx  pid.cir
tooi-image/: directkeys.py  driver.py
tpns/: .gitignore
(+870 files in other folders)
